{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 773,
  "lineage": "0bf74d0d-385c-27ad-6a2a-d67773b0e0fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:security-group/sg-0375b67f0f6a748ff",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0375b67f0f6a748ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20201130055913999000000008",
            "name_prefix": "all_worker_management",
            "owner_id": "346831921596",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:security-group/sg-095c545ace7a1882c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-095c545ace7a1882c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20201130055913997700000007",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "346831921596",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:security-group/sg-05b59460ed91a7951",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05b59460ed91a7951",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20201130055914000200000009",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "346831921596",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backbase-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:security-group/sg-0a82bff4bc8a3c2b2",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0a82bff4bc8a3c2b2",
            "ingress": [],
            "name": "backbase-eks-cluster2020113005591487070000000d",
            "name_prefix": "backbase-eks-cluster",
            "owner_id": "346831921596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backbase-eks-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backbase-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:security-group/sg-098ae6c42f7a7e6b8",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-098ae6c42f7a7e6b8",
            "ingress": [],
            "name": "backbase-eks-cluster2020113005591486350000000c",
            "name_prefix": "backbase-eks-cluster",
            "owner_id": "346831921596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backbase-eks-cluster-eks_worker_sg",
              "kubernetes.io/cluster/backbase-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backbase-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1461085539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a82bff4bc8a3c2b2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.backbase-eks-cluster.aws_security_group.cluster",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backbase-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1637685362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a82bff4bc8a3c2b2",
            "self": false,
            "source_security_group_id": "sg-098ae6c42f7a7e6b8",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.backbase-eks-cluster.aws_security_group.cluster",
            "module.backbase-eks-cluster.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backbase-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-132105586",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-098ae6c42f7a7e6b8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.backbase-eks-cluster.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backbase-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3191050372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-098ae6c42f7a7e6b8",
            "self": false,
            "source_security_group_id": "sg-0a82bff4bc8a3c2b2",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.backbase-eks-cluster.aws_security_group.cluster",
            "module.backbase-eks-cluster.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backbase-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3659718843",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-098ae6c42f7a7e6b8",
            "self": false,
            "source_security_group_id": "sg-0a82bff4bc8a3c2b2",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.backbase-eks-cluster.aws_security_group.cluster",
            "module.backbase-eks-cluster.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backbase-eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-66511442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-098ae6c42f7a7e6b8",
            "self": false,
            "source_security_group_id": "sg-098ae6c42f7a7e6b8",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.backbase-eks-cluster.aws_security_group.workers",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03f920e009f61a764",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-31-22-109.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.22.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "backbase-vpc-eu-west-1a",
              "kubernetes.io/cluster/first-sample-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:internet-gateway/igw-08e60146fca571c39",
            "id": "igw-08e60146fca571c39",
            "owner_id": "346831921596",
            "tags": {
              "Name": "backbase-vpc",
              "kubernetes.io/cluster/first-sample-eks": "shared"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f920e009f61a764",
            "id": "nat-00fa6cf39966a95f0",
            "network_interface_id": "eni-0ecd5f0f2d3505246",
            "private_ip": "192.168.6.225",
            "public_ip": "52.31.22.109",
            "subnet_id": "subnet-00ed78cf405e115fe",
            "tags": {
              "Name": "backbase-vpc-eu-west-1a",
              "kubernetes.io/cluster/first-sample-eks": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1ae74d1076a67521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00fa6cf39966a95f0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1ae74d1076a6752",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08e60146fca571c39",
            "id": "r-rtb-0f39e6c90226107ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f39e6c90226107ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c1ae74d1076a6752",
            "owner_id": "346831921596",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "backbase-vpc-private",
              "kubernetes.io/cluster/first-sample-eks": "shared"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f39e6c90226107ce",
            "owner_id": "346831921596",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "backbase-vpc-public",
              "kubernetes.io/cluster/first-sample-eks": "shared"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01177d448b1002d4c",
            "route_table_id": "rtb-0c1ae74d1076a6752",
            "subnet_id": "subnet-0a7e21d9acc8032e4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a697d646e2eaf55",
            "route_table_id": "rtb-0c1ae74d1076a6752",
            "subnet_id": "subnet-01d7d1fe8ed87f60b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd8774e22b62adf6",
            "route_table_id": "rtb-0c1ae74d1076a6752",
            "subnet_id": "subnet-0e0f121f898915794"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f87525f487052417",
            "route_table_id": "rtb-0f39e6c90226107ce",
            "subnet_id": "subnet-00ed78cf405e115fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c2c7bd792805ab3",
            "route_table_id": "rtb-0f39e6c90226107ce",
            "subnet_id": "subnet-0b93fb84568382200"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c212a75008bf4829",
            "route_table_id": "rtb-0f39e6c90226107ce",
            "subnet_id": "subnet-0497a067b9f6aa0cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:subnet/subnet-0a7e21d9acc8032e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.0/23",
            "id": "subnet-0a7e21d9acc8032e4",
            "map_public_ip_on_launch": false,
            "owner_id": "346831921596",
            "tags": {
              "Name": "backbase-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/first-sample-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:subnet/subnet-01d7d1fe8ed87f60b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.2.0/23",
            "id": "subnet-01d7d1fe8ed87f60b",
            "map_public_ip_on_launch": false,
            "owner_id": "346831921596",
            "tags": {
              "Name": "backbase-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/first-sample-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:subnet/subnet-0e0f121f898915794",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.4.0/23",
            "id": "subnet-0e0f121f898915794",
            "map_public_ip_on_launch": false,
            "owner_id": "346831921596",
            "tags": {
              "Name": "backbase-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/first-sample-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:subnet/subnet-00ed78cf405e115fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.6.0/23",
            "id": "subnet-00ed78cf405e115fe",
            "map_public_ip_on_launch": true,
            "owner_id": "346831921596",
            "tags": {
              "Name": "backbase-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/first-sample-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:subnet/subnet-0b93fb84568382200",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.8.0/23",
            "id": "subnet-0b93fb84568382200",
            "map_public_ip_on_launch": true,
            "owner_id": "346831921596",
            "tags": {
              "Name": "backbase-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/first-sample-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:subnet/subnet-0497a067b9f6aa0cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.10.0/23",
            "id": "subnet-0497a067b9f6aa0cd",
            "map_public_ip_on_launch": true,
            "owner_id": "346831921596",
            "tags": {
              "Name": "backbase-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/first-sample-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02991cf5c94deb34e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:346831921596:vpc/vpc-02991cf5c94deb34e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-046db03172392952f",
            "default_route_table_id": "rtb-0fa983f62c1917ce8",
            "default_security_group_id": "sg-0ee02eceda6c6cfd9",
            "dhcp_options_id": "dopt-a8f0f7ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02991cf5c94deb34e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa983f62c1917ce8",
            "owner_id": "346831921596",
            "tags": {
              "Name": "backbase-vpc",
              "kubernetes.io/cluster/first-sample-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}